# cal

src/: CMakeLists.txt  Makefile  a.out  calc.c  calc.h  documentation.texi  polish.c  polish.h  stack.c  stack.h  stack_numb.c  stack_numb.h  stack_symb.c  stack_symb.h  test_polish.c  test_stack.c
src/calclogic/: Makefile  calc.c  calc.h  credit.c  credit.h  deposit.c  deposit.h  polish.c  polish.h  stack_numb.c  stack_numb.h  stack_symb.c  stack_symb.h
src/calclogic/tests/: polish_test.c  smartcalc_test.c  test.c  test.h
src/gui/: Makefile  gui  gui.pro  main.cpp  smartcalc.cpp  smartcalc.h
src/tests/: polish_test.c  test.h
